# WISE

./: .gitignore  LICENSE  README.md  main.py  precompute_scores.py  pyproject.toml  requirements.txt  settings.json
data/data_BPIC_2019/: BPIC_2019.json  BPIC_2019_weights.json  BPIC_2019_weights.yaml  BPIC_2019_weights_1.yaml  WISE_Framework_BPIC_2019.xlsx
data/data_BPIC_2019_Service/: BPIC_2019_Service.json  BPIC_2019_Service_weights.yaml
data/data_sample/: sample.json  sample_weights.json  sample_weights.yaml
data/results/: analysis_report.txt  analysis_report_BPIC_2019.txt
data/results/data_BPIC_2019/: analysis_report_BPIC_2019.txt
src/: base_score_calculator.py  data_analysis.ipynb  data_analysis_logistics.ipynb  data_handler.py  excel_to_yaml_converter.py  helper.py  openai_agents_analysts.py  openai_image_analyzer.py  performance_analyzer.py  process_score_calculator.py  process_score_calculator_old.py  score_equilib.py  score_exclusion.py  score_foundational.py  score_sequential.py  score_singular.py  scores.py  test.ipynb
src/llm_agents/: openai_agents_analysts.py  openai_image_analyzer.py
src/reports_helper/: reports_comparision.py  sankey.py
src/wise/: __init__.py  model.py  norm.py
src/wise/analysis/: 0_WISE_BPIC19_Norm_Playbook.ipynb  1_WISE_BPIC19_Analysis.ipynb  (+6 more)
tests/: conftest.py  test_norm_loader.py  test_presence_layer.py  test_scoring.py
wise_flow/data/: analyse_log.xlsx
wise_flow/tests/: 01_linear_regression.ipynb  anomaly.ipynb  clustering_data.ipynb  create_sample.py  explore_data.ipynb  helper.py  kmeans.ipynb
(+23 files in other folders)
