[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wise"
version = "0.1.0"
description = "WISE: Norm-based prioritization of process deviations"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"

# You can keep dependencies in requirements.txt if you prefer.
# If you want, you can gradually move core deps here:
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "pm4py>=2.7",
  # add more core deps as needed
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
